# fast-ods

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
fast_ods/: __init__.py  fast_ods.py
