[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-ods"
version = "0.2.0"
description = "Fast, streaming parser for OpenDocument Spreadsheet (.ods) files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Daniel Teixeira Duarte" }
]

keywords = ["ods",  "opendocument", "spreadsheet", "parser", "streaming", "etl", "zip"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: File Formats",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
    "Typing :: Typed"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/atomiclake/fast-ods"
Repository = "https://github.com/atomiclake/fast-ods"